test_cases/negative/compiler/type_mismatch_custom.snek
def Foo(value) {
    return value > Exec("echo hello");
}

export DEFAULT = Foo("Hello");
